--- a/html/css/style.css
+++ b/html/css/style.css
@@ -54,6 +54,7 @@ body{
 	height: 60px;
 	width: 100%;	
 	border-bottom: 1px solid #e7e7e7;
+	z-index: 20;
 }
 #btn_back{
 	width: 60px;
@@ -121,8 +122,7 @@ body{
 	top: 0px;
 	left: 0px;
 	right: 0px;
-	height: 100%;	
-	background: #fff url('../img/map.png') no-repeat center;
+	bottom: 0px;
 	background-size: auto 100%;
 	background-position: fixed;
 }
