--- a/html/css/style.css
+++ b/html/css/style.css
@@ -11,7 +11,31 @@ body{
 	margin: 0px;
 	font: -webkit-small-control;
 }
-
+#error{
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	height: auto;
+	background: #999;
+	color: #FF0000;
+	opacity: 0;
+	z-index: 10;
+	padding: 10px 20px;
+	text-align: center;
+}
+#loading{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 50px;
+	height: 50px;
+	margin-left: -25px;
+	margin-top: -25px;
+	background: url('../img/ajax-loader.gif') no-repeat center;	
+	z-index: 10000;
+	display: none;
+}
 .panel{
 	position: absolute;
 	top: 0px;
