change some styling in the info panels

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -160,7 +160,7 @@ body{
 	right: 0px;
 	height: 0px;
 	width: 100%;
-	background-color: #f4f4f4;
+	background-color: #007aa7;
 }
 #lives_improved{
 	position: absolute;
