--- a/html/css/style.css
+++ b/html/css/style.css
@@ -77,11 +77,11 @@ body{
 #title_bar{
 	position: absolute;
 	top: 0px;
-	background: #efefef;
+	background: #262626;
 	height: 60px;
 	width: 100%;	
-	border-bottom: 1px solid #e7e7e7;
-	z-index: 20;
+	z-index: 2000;
+
 }
 #btn_back{
 	width: 60px;
@@ -91,6 +91,9 @@ body{
 	left: 0px;
 	background:url('../img/back_btn.png') no-repeat 20px 12px;
 	background-size: auto 55%;
+}
+#btn_back.hide{
+	display: none;
 }
 #toggle_favourite{
 	width: 60px;
@@ -102,13 +105,20 @@ body{
 	background-size: auto 45%;
 }
 #info{
-
+	position: absolute;
+	right: 60px;
+	left: 60px;
+	text-align: center;
+	margin-top: 5px;
 }
 #region_name{
-
+	color: #fff;
+	font-size: 22px;
+	
 }
 #filter_breadcrumb{
-
+	color: #fff;
+	font-size: 12px;
 }
 #menu_bar{
 	position: absolute;
@@ -116,6 +126,7 @@ body{
 	height: 60px;
 	width: 100%;
 	text-align: center;
+	z-index: 10000;
 }
 #menu_bar .btn{
 	background-size: auto 80%;
@@ -152,6 +163,7 @@ body{
 	bottom: 0px;
 	background-size: auto 100%;
 	background-position: fixed;
+	z-index: 10;
 }
 #region_info{
 	position: absolute;
@@ -161,8 +173,110 @@ body{
 	height: 0px;
 	width: 100%;
 	background-color: #007aa7;
+	z-index: 20;
+	-webkit-box-shadow: inset 0 8px 6px -6px black;
+	-moz-box-shadow: inset 0 8px 6px -6px black;
+	box-shadow: inset 0 10px 60px -20px black;	
 }
-#lives_improved{
+.svg_wrapper{
+	position: absolute;
+	width: 50%;
+	bottom: 0px;
+	height: 100%;
+}
+.data_wrapper{
+	position: absolute;
+	width: 50%;
+	bottom: 0px;
+	left: 50%;
+	height: 200px;
+	display: inline-block;
+}
+#holder{
+	width: 50%;
+	overflow: hidden;
+	float: left;
+}
+#holder svg{
+	position: absolute!important;
+	bottom: 0px;
+	left: 0px;
+}
+#region_data{
+	text-align: right;
+	width: 50%;
+	height: 100%;
+}
+#region_data div{
+	padding-right: 15px;
+}
+span{
+	display: block;
+}
+#region_lives_improved{
+	position: absolute;
+	display: block;
+	bottom: 50%;
+	height: 50%;
+	left: 0px;
+	right: 0px;
+}
+#region_gdp{
+	position: absolute;
+	display: block;
+	height: 25%;
+	bottom: 25%;
+	left: 0px;
+	right: 0px;	
+}
+#region_population{
+	position: absolute;
+	display: block;
+	height: 25%;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;		
+}
+#nr_lives_improved{
+	font-size: 50px;
+	color: #fff;
+}
+.lives_improved_sub{
+	clear: both;
+	display: block;
+	font-size: 9px;
+	color: #004c63;
+	font-weight: bold;
+}
+#nr_gdp{
+	color: #fff;
+}
+#nr_population{
+	color: #fff;
+}
+#percentage{
+	position: absolute;
+	bottom: 75px;
+	left: 75px;
+	z-index: 0;
+	background: transparent;
+	width: 50px;
+	height: 50px;
+}
+#percentage div{
+	text-align: center;
+}
+#lives_improved_percentage{
+	font-size: 25px;
+	color: #fff;
+}
+#lives_improved_percentage_sub{
+	font-size: 9px;
+	color: #004c63;
+	font-weight: bold;
+}
+
+#simulation{
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
@@ -171,6 +285,10 @@ body{
 	width: 100%;
 	border-top: 1px solid #e7e7e7;
 	background-color: #f4f4f4;
+	z-index: 30;
+}
+#simulation_wrapper{
+	margin: 30px;
 }
 #login_panel{
 	background-color: #f4f4f4;
@@ -225,36 +343,61 @@ body{
 }
 input[type='range'] {
     -webkit-appearance: none;
-    width: 280px;
+    width: 100%;
     height: 1px;
     padding: 0px;
     -webkit-border-radius: 15px;
     border-radius: 15px;
-    border: 1px solid #525252;
+    border: 1px solid #007aa7;
     background-image: -webkit-gradient(
         linear,
         left top,
         left bottom,
-        color-stop(0, #000000),
-        color-stop(1, #222222)
+        color-stop(0, #00495d),
+        color-stop(1, #00495d)
     );
+    z-index: 10000;
 }
 input[type='range']::-webkit-slider-thumb {  
     -webkit-appearance: none;
     width: 20px;
     height: 20px;
+    border: 1px solid #ededed;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background-image: 
-    -webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #000),
-        color-stop(0.49, #dddddd),
-        color-stop(0.51, #d1d1d1),
-        color-stop(1, #a1a1a1)
-    );
+    background-color: #fff;
     background-repeat: no-repeat;
     background-position: 50%;
+-moz-box-shadow:    0px 0px 1px 1px #ccc;
+  -webkit-box-shadow: 0px 0px 1px 1px #ccc;
+  box-shadow: 0px 0px 1px 1px #ccc;
+  	z-index: 10000;
+}
+.range_indicator{
+	width: 100%;
+	height: 20px;
+	position: relative;
+	padding-top: 5px;
+	color: #4a4a4a;
+	font-size: 9px;
+}
+.range_indicator .min{
+	position: absolute;
+	left: 0%;
+}
+.range_indicator .zero{
+	position: absolute;
+	left: 41%;	
+}
+.range_indicator .max{
+	position: absolute;
+	left: 98%;	
+}
+h3{
+	color: #4a4a4a;
+	font-size: 20px;
+	font-weight: normal;
+}
+h4{
+	color: #4a4a4a;
 }
