--- a/html/css/style.css
+++ b/html/css/style.css
@@ -343,9 +343,10 @@ span{
 }
 input[type='range'] {
     -webkit-appearance: none;
-    width: 100%;
+    width: 85%;
     height: 1px;
     padding: 0px;
+    margin-top: -3px;
     -webkit-border-radius: 15px;
     border-radius: 15px;
     border: 1px solid #007aa7;
@@ -368,13 +369,19 @@ input[type='range']::-webkit-slider-thumb {
     background-color: #fff;
     background-repeat: no-repeat;
     background-position: 50%;
--moz-box-shadow:    0px 0px 1px 1px #ccc;
-  -webkit-box-shadow: 0px 0px 1px 1px #ccc;
-  box-shadow: 0px 0px 1px 1px #ccc;
+	-moz-box-shadow:    0px 0px 1px 1px #ccc;
+  	-webkit-box-shadow: 0px 0px 1px 1px #ccc;
+  	box-shadow: 0px 0px 1px 1px #ccc;
   	z-index: 10000;
 }
+.slider_value{
+	width: 10%;
+	display: inline-block;
+	font-size: 17px;
+	padding: 0px 4px;
+}
 .range_indicator{
-	width: 100%;
+	width: 85%;
 	height: 20px;
 	position: relative;
 	padding-top: 5px;
