--- a/html/css/style.css
+++ b/html/css/style.css
@@ -68,11 +68,25 @@ body{
 	-webkit-box-sizing:border-box;
 }
 .btn_close{
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	padding: 10px 0 0 0;
+	text-align: center;
+	color: #fff;
+	font-size: 15px;
+	font-weight: bold;
+}
+.panel_header{
+	position: absolute;
+	top: 0px;
+	left: 0px;
 	width: 100%;
 	height: 40px;
-	float: right;
-	padding: 15px 0 0 0;
-	text-align: center;
+	background: #1f1f1f;
+	color: #fff;
 }
 .modal_content{
 	position: relative;
@@ -440,6 +454,10 @@ input[type='range']::-webkit-slider-thumb {
 .range_indicator .max{
 	position: absolute;
 	left: 98%;	
+}
+h2{
+	font-size: 17px;
+	margin: 10px 10px;
 }
 h3{
 	color: #4a4a4a;
