--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,3 +1,8 @@
+@font-face
+{
+	font-family: gill;
+	src: url('../fonts/gsa_wg_l-webfont.woff')
+}
 *{
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);	
 }
@@ -10,6 +15,7 @@ body{
 	overflow: hidden;
 	margin: 0px;
 	font: -webkit-small-control;
+	font-family: gill;
 }
 #error{
 	position: absolute;
@@ -89,10 +95,11 @@ body{
 	color: #fff;
 }
 .modal_content{
-	position: relative;
+	position: absolute;
 	top: 40px;
 	bottom: 0px;
 	width: 100%;
+	overflow: auto;
 }
 #title_bar{
 	position: absolute;
@@ -106,7 +113,6 @@ body{
 #btn_back{
 	width: 60px;
 	height: 60px;
-	position: absolute;
 	top: 0px;
 	left: 0px;
 	background:url('../img/back_btn.png') no-repeat 20px 12px;
@@ -122,13 +128,17 @@ body{
 	position: absolute;
 	top: 0px;
 	right: 0px;	
-	background:url('../img/add_favourite.png') no-repeat 5px 15px;	
+	background:url('../img/topfavorite.svg') no-repeat 5px 15px;	
 	background-size: auto 45%;
+}
+#toggle_favourite.selected{
+	background-image:url('../img/favorite.svg');	
 }
 #info{
 	position: absolute;
 	right: 60px;
 	left: 60px;
+	top: 0px;
 	text-align: center;
 	margin-top: 5px;
 	opacity: 0;
@@ -136,11 +146,12 @@ body{
 #region_name{
 	color: #fff;
 	font-size: 22px;
-	
+	margin-top: -6px;
 }
 #filter_breadcrumb{
 	color: #fff;
 	font-size: 12px;
+	line-height: 12px;
 }
 #menu_bar{
 	position: absolute;
@@ -152,18 +163,24 @@ body{
 }
 #menu_bar .btn{
 	background-size: auto 80%;
+	font-size:12px;
+	color: #fff;
 }
 #btn_bookmarks{
-	background: #272c2d url('../img/bookmarks.png') no-repeat 50% 10px;	
+	background: #272c2d url('../img/favorite.svg') no-repeat 50% 10px;	
+	background-size: 30% auto!important;
 }
 #btn_filter{
-	background: #272c2d url('../img/filters.png') no-repeat 50% 10px;	
+	background: #272c2d url('../img/filter.svg') no-repeat 50% 10px;	
+	background-size: 30% auto!important;
 }
 #btn_explain{
-	background: #272c2d url('../img/faq.png') no-repeat 50% 8px;	
+	background: #272c2d url('../img/faq.svg') no-repeat 50% 8px;	
+	background-size: 30% auto!important;
 }
 #btn_logout{
-	background: #272c2d url('../img/logout.png') no-repeat 50% 10px;	
+	background: #272c2d url('../img/logout.svg') no-repeat 50% 10px;	
+	background-size: 30% auto!important;
 }
 
 #app_panel{
@@ -189,10 +206,10 @@ body{
 }
 #region_info{
 	position: absolute;
-	top: 0px;
+	top: -40%;
 	left: 0px;
 	right: 0px;
-	height: 0px;
+	height: 40%;
 	width: 100%;
 	background-color: #007aa7;
 	z-index: 20;
@@ -212,19 +229,21 @@ path#arc_path, circle#background{
 	stroke-width: 20;       	
 }
 path#arc_path{
-	stroke: #00495d;     	
+	/*stroke: #00495d;*/     	
+	stroke: #000000;
+	opacity: .4;
 }
 circle#background{
-	stroke-opacity: .8;
-	stroke: #006890;
+	stroke-opacity: .1;
+	stroke: #efefef;
 }
 .data_wrapper{
 	position: absolute;
 	width: 50%;
 	bottom: 0px;
 	left: 50%;
-	height: 200px;
-	display: inline-block;
+	height: 100%;
+	display: block;
 }
 #holder{
 	width: 50%;
@@ -237,12 +256,12 @@ circle#background{
 }
 
 #region_data{
+	position: absolute;
 	text-align: right;
-	width: 50%;
+	width: 100%;
 	height: 100%;
 }
 #region_data div{
-	display: inline-block;
 	padding-right: 15px;
 	padding-left: 30px;
 	width: auto;
@@ -254,16 +273,16 @@ span{
 #region_lives_improved{
 	position: absolute;
 	display: block;
-	bottom: 50%;
-	height: 50%;
+	bottom: 40%;
+	height: 60%;
 	left: 0px;
 	right: 0px;
 }
 #region_gdp{
 	position: absolute;
 	display: block;
-	height: 25%;
-	bottom: 25%;
+	height: 20%;
+	bottom: 20%;
 	left: 0px;
 	right: 0px;
 		
@@ -271,15 +290,15 @@ span{
 #region_population{
 	position: absolute;
 	display: block;
-	height: 25%;
+	height: 20%;
 	bottom: 0px;
 	left: 0px;
 	right: 0px;		
 }
 #nr_lives_improved{
-	padding-top: 10px;
-	font-size: 50px;
-	height: 50px;
+	padding-right: 0px!important;
+	font-size: 70px;
+	height: 70px;
 	color: #fff;
 }
 .lives_improved_sub{
@@ -287,7 +306,7 @@ span{
 	display: block;
 	font-size: 10px;
 	width: 100%;
-	color: #004c63;
+	color: #fff;
 	font-weight: bold;
 	padding-right: 5px!important;
 	padding-left: 5px!important;
@@ -295,16 +314,18 @@ span{
 #nr_gdp{
 	color: #fff;
 	padding-top: 2px;
-	background: url('../img/gdp_icon.png') no-repeat 0px -4px;	
-	height: 45px;
+	background: url('../img/gdp.svg') no-repeat 0px 0px;	
+	height: 25px;
+	background-size: 25px auto;
 	padding-right: 5px!important;
 }
 #nr_population{
 	color: #fff;
 	padding-top: 5px;
 	padding-right: 5px!important;
-	background: url('../img/population_icon.png') no-repeat 0px -2px;	
-	height: 45px;
+	background: url('../img/population.svg') no-repeat 0px 0px;	
+	height: 25px;
+	background-size: 25px auto;
 }
 #percentage{
 	position: absolute;
@@ -320,28 +341,29 @@ span{
 	text-align: center;
 }
 #lives_improved_percentage{
-	font-size: 35px;
+	font-size: 25px;
+	font-weight: bold;
 	color: #fff;
 }
 #lives_improved_percentage_sub{
 	font-size: 8px;
-	color: #004c63;
+	color: #fff;
 	font-weight: bold;
 }
 
 #simulation{
 	position: absolute;
-	bottom: 0px;
+	bottom: -60%;
 	left: 0px;
 	right: 0px;
-	height: 0px;
+	height: 60%;
 	width: 100%;
 	border-top: 1px solid #e7e7e7;
 	background-color: #f4f4f4;
 	z-index: 30;
 }
 #simulation_wrapper{
-	margin: 30px;
+	margin: 0px 30px;
 }
 #login_panel{
 	background-color: #f4f4f4;
@@ -385,9 +407,131 @@ span{
 #filter_panel{
 	background: #fff;
 }
+#filter_panel h4{
+	padding-left: 10px;	
+}
+#filter_container ul{
+	list-style-type: none;
+	padding-left: 10px;
+}
+#filter_container ul > li{
+	position: relative;
+	margin-top: 20px;
+	font-size: 20px;
+	color: #2d2d2d;
+}
+#filter_container ul > li ul{
+	padding-top: 2px;
+	margin-left: 20px;
+	overflow: hidden;
+}
+#filter_container ul li  li{
+	margin-top: 5px;
+	font-size: 14px;
+}
+#filter_container ul > li ul li ul{
+	height: 0px;
+}
+#filter_container ul > li ul li div{
+	margin: 10px 0px;
+}
+.mru_sector_color{
+	position: absolute;
+	left: 19px;
+	top: 30px;
+	width: 3px;
+	bottom: 4px;
+}
+li#PD0100.selected, li#PD0100 .selected{
+	color: #7dba00!important;
+}
+li#PD0100 .mru_sector_color{
+	background: #7dba00;
+}
+li#PD0200.selected, li#PD0200 .selected{
+	color: #68049c!important;
+}
+li#PD0200 .mru_sector_color{
+	background: #68049c;
+}
+li#PD0900.selected, li#PD0900 .selected{
+	color: #2badb5!important;
+}
+li#PD0900 .mru_sector_color{
+	background: #2badb5;
+}
+li#philips.selected{
+	color: #0b5ed7;
+}
+
+#oru_filter_container div{
+	width: 25%;
+	height: 40px;
+	float: left;
+	border-right: 1px solid #fff;
+	box-sizing:border-box;
+  	-moz-box-sizing:border-box;
+  	-webkit-box-sizing:border-box;
+	background: #999; 
+	color: #2d2d2d;
+	margin-top: 5px;
+	margin-bottom: 15px;	
+	text-align: center;
+	padding-top: 10px;
+}
+#oru_filter_container div:last-child{
+	border-right: none;
+}
+#oru_filter_container div.selected{
+	background: #2d2d2d;
+	color: #fff;
+}
 #bookmarks_panel{
 	background: #fff;
 }
+#bookmarks_panel ul{
+	position: absolute;
+	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	overflow: auto;
+	overflow-x: hidden;
+}
+#bookmarks_panel ul li{
+	height: 50px;
+	position: relative;
+	border-bottom: 1px solid #999;
+}
+.bookmark_color{
+	position: absolute;
+	height: 40px;
+	width: 10px;
+	top: 0px;
+	left: 10px;
+}
+#bookmarks_panel ul li h2{
+	padding-left: 25px;
+	margin-bottom: 0px;
+}
+#bookmarks_panel ul li span{
+	padding-left: 35px;
+	color: #333;
+	font-size: 12px;
+}
+.remove_bookmark{
+	top: 0px;
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	right: 0px;
+	background: url('../img/trash.svg') no-repeat 16px 8px;
+	opacity: 0.8;
+	background-size: 20px auto;
+}
+
 #explain_panel{
 	background: #fff;
 }
@@ -412,6 +556,50 @@ input[type='range'] {
     );
     z-index: 10000;
 }
+
+
+body.PD0100 input[type='range']{
+	border: 1px solid #7dba00;
+	background: #7dba00;
+}
+body.PD0200 input[type='range'] {
+	border: 1px solid #68049c;
+	background: #68049c;
+}
+body.PD0900 input[type='range'] {
+	border: 1px solid #2badb5;
+	background: #2badb5;
+}
+body.philips input[type='range'] {
+	border: 1px solid #0b5ed7;
+	background: #0b5ed7;
+}
+
+body.PD0100 #region_info{
+	background: #7dba00;
+}
+body.PD0200 #region_info{
+	background: #68049c;
+}
+body.PD0900 #region_info {
+	background: #2badb5;
+}
+body.philips #region_info {
+	background: #0b5ed7;
+}
+
+body.PD0100 .slider_value{
+	color: #7dba00;
+}
+body.PD0200 .slider_value {
+	color: #68049c;
+}
+body.PD0900 .slider_value {
+	color: #2badb5;
+}
+body.philips .slider_value {
+	color: #0b5ed7;
+}
 input[type='range']::-webkit-slider-thumb {  
     -webkit-appearance: none;
     width: 20px;
@@ -427,6 +615,7 @@ input[type='range']::-webkit-slider-thumb {
   	box-shadow: 0px 0px 1px 1px #ccc;
   	z-index: 10000;
 }
+
 .slider_value{
 	width: 12%;
 	display: inline-block;
@@ -464,9 +653,9 @@ h3{
 	color: #4a4a4a;
 	font-size: 20px;
 	font-weight: normal;
-	
+	margin-top: 10px;
 }
 h4{
 	color: #4a4a4a;
-
+margin-bottom: 5px;
 }
