--- a/html/css/style.css
+++ b/html/css/style.css
@@ -14,7 +14,6 @@ body{
 	bottom: 0px;
 	overflow: hidden;
 	margin: 0px;
-	font: -webkit-small-control;
 	font-family: gill;
 }
 #error{
@@ -136,22 +135,41 @@ body{
 }
 #info{
 	position: absolute;
+	bottom: 0px;
 	right: 60px;
 	left: 60px;
 	top: 0px;
 	text-align: center;
-	margin-top: 5px;
-	opacity: 0;
+
+}
+
+.info_wrapper{
+	display: block;
+  	vertical-align: middle;
+	margin: auto 0px;
 }
 #region_name{
 	color: #fff;
 	font-size: 22px;
-	margin-top: -6px;
+	height: 22px;
 }
-#filter_breadcrumb{
+#filter_breadcrumb_wrapper{
+	display: block;
+	width: 100%;
+	position: absolute;
+	top: 25px;
+	padding: 2px 0px;
 	color: #fff;
+	height: 24px;
 	font-size: 12px;
 	line-height: 12px;
+}
+#filter_breadcrumb{
+	height: auto;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
 }
 #menu_bar{
 	position: absolute;
@@ -168,19 +186,19 @@ body{
 }
 #btn_bookmarks{
 	background: #272c2d url('../img/favorite.svg') no-repeat 50% 10px;	
-	background-size: 30% auto!important;
+	background-size: auto 30%!important;
 }
 #btn_filter{
 	background: #272c2d url('../img/filter.svg') no-repeat 50% 10px;	
-	background-size: 30% auto!important;
+	background-size: auto 30%!important;
 }
 #btn_explain{
 	background: #272c2d url('../img/faq.svg') no-repeat 50% 8px;	
-	background-size: 30% auto!important;
+	background-size: auto 30%!important;
 }
 #btn_logout{
 	background: #272c2d url('../img/logout.svg') no-repeat 50% 10px;	
-	background-size: 30% auto!important;
+	background-size: auto 30%!important;
 }
 .btn_close{
 	background: url('../img/close_icon.svg') no-repeat 50% 50%;
@@ -266,7 +284,7 @@ circle#background{
 }
 #region_data div{
 	padding-right: 15px;
-	padding-left: 30px;
+	
 	width: auto;
 	
 }
@@ -300,7 +318,7 @@ span{
 }
 #nr_lives_improved{
 	padding-right: 0px!important;
-	font-size: 70px;
+	font-size: 4em;
 	height: 70px;
 	color: #fff;
 }
@@ -309,10 +327,12 @@ span{
 	display: block;
 	font-size: 10px;
 	width: 100%;
-	color: #fff;
+	color: #000000;
+	opacity: .4;
 	font-weight: bold;
 	padding-right: 5px!important;
 	padding-left: 5px!important;
+	
 }
 #nr_gdp{
 	color: #fff;
@@ -330,27 +350,16 @@ span{
 	height: 25px;
 	background-size: 25px auto;
 }
-#percentage{
-	position: absolute;
-	bottom: 65px;
-	left: 38px;
-	z-index: 0;
-	background: transparent;
-	width: 80px;
-	height: 80px;
-	opacity: 0;
-}
-#percentage div{
-	text-align: center;
-}
+
 #lives_improved_percentage{
-	font-size: 25px;
+	font-size: 4em;
 	font-weight: bold;
-	color: #fff;
+	fill: #fff;
 }
 #lives_improved_percentage_sub{
-	font-size: 8px;
-	color: #fff;
+	font-size: 1.2em;
+	color: #000000;
+	opacity: .4;
 	font-weight: bold;
 }
 
@@ -367,7 +376,26 @@ span{
 }
 #simulation_wrapper{
 	margin: 0px 30px;
+	opacity: 0px;
 }
+#simulation_wrapper h3{
+	height: 20%;
+}
+#simulation_wrapper #section1{
+	position: absolute;
+	height: 40%;
+	top: 20%;
+	width: 85%;
+}
+#simulation_wrapper #section2{
+	position: absolute;
+	height: 40%;
+	top: 60%;
+	width: 85%;
+}
+
+
+
 #login_panel{
 	background-color: #f4f4f4;
 	background-image:url('../img/login_bg.png');
@@ -375,6 +403,10 @@ span{
 	background-position: fixed;
 	background-size: auto 100% ;
 	z-index: 2;
+}
+#login_panel span{
+	font-size: 12px;
+	padding-bottom: 10px;
 }
 #login{
 	position: absolute;
@@ -387,7 +419,12 @@ span{
 	width: 100%;
 	height: 40px;
 	margin: 0 0 10px 0;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;	
 } 
+#login input[type=text], #login input[type=password]{
+	padding-left: 5px;
+}
 #btn_submit{
 	position: relative;
 	right: 0px;
@@ -656,9 +693,94 @@ h3{
 	color: #4a4a4a;
 	font-size: 20px;
 	font-weight: normal;
-	margin-top: 10px;
+	margin-top: 0.5em;
+	margin-bottom: 0.2em;
 }
 h4{
 	color: #4a4a4a;
-margin-bottom: 5px;
+margin-bottom: 2%;
+margin-top: 1%;
+}
+
+
+
+
+
+
+
+
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+/* Styles */
+
+}
+
+/* iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+/* Styles */
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+/* Styles */
+}
+
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 768px) {
+/* Styles */
+	#region_info{
+		height: 30%;
+		width: 50%;
+		top: -30%;
+		border-bottom: 1px solid #ececec;
+	}
+	#simulation{
+		left: 50%;
+		top: -30%;
+		height: 30%;
+		border-bottom: 1px solid #ececec;
+	}
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+/* Styles */
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
 }
