--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,8 +1,14 @@
 @font-face
 {
+	font-family: gill_header;
+	src: url('../fonts/gsa_wg-webfont.woff')
+}
+@font-face
+{
 	font-family: gill;
 	src: url('../fonts/gsa_wg_l-webfont.woff')
 }
+family:'GillSansAltOneWGLLightRegular';src:url('/fonts/gsa_wg_l-webfont.eot');src:url('/fonts/gsa_wg_l-webfont.eot?#iefix') format('embedded-opentype'),url('/fonts/gsa_wg_l-webfont.woff') format('woff'),url('/fonts/gsa_wg_l-webfont.ttf') format('truetype'),url('/fonts/gsa_wg_l-webfont.svg#GillSansAltOneWGLLightRegular') format('svg');font-weight:normal;font-style:normal}@font-face{font-family:'GillSansAltOneWGLRegular';src:url('/fonts/gsa_wg-webfont.eot');src:url('/fonts/gsa_wg-webfont.eot?#iefix') format('embedded-opentype'),url('/fonts/gsa_wg-webfont.woff') format('woff'),url('/fonts/gsa_wg-webfont.ttf') format('truetype'),url('/fonts/gsa_wg-webfont.svg#GillSansAltOneWGLLightRegular') format('svg');font-weight:normal;font-style:normal}
 *{
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);	
 }
@@ -152,6 +158,7 @@ body{
 	color: #fff;
 	font-size: 22px;
 	height: 22px;
+	font-family: gill_header;
 }
 #filter_breadcrumb_wrapper{
 	display: block;
@@ -489,24 +496,29 @@ span{
 }
 li#PD0100.selected, li#PD0100 .selected{
 	color: #7dba00!important;
+	font-family: gill_header;
 }
 li#PD0100 .mru_sector_color{
 	background: #7dba00;
 }
 li#PD0200.selected, li#PD0200 .selected{
 	color: #68049c!important;
+	font-family: gill_header;
 }
 li#PD0200 .mru_sector_color{
 	background: #68049c;
 }
 li#PD0900.selected, li#PD0900 .selected{
 	color: #2badb5!important;
+	font-family: gill_header;
 }
 li#PD0900 .mru_sector_color{
 	background: #2badb5;
 }
 li#philips.selected{
 	color: #0b5ed7;
+	font-family: gill_header;
+	font-weight: bold;
 }
 
 #oru_filter_container div{
@@ -693,6 +705,7 @@ input[type='range']::-webkit-slider-thumb {
 h2{
 	font-size: 17px;
 	margin: 10px 10px;
+	font-family: gill_header;
 }
 h3{
 	color: #4a4a4a;
@@ -700,19 +713,17 @@ h3{
 	font-weight: normal;
 	margin-top: 0.5em;
 	margin-bottom: 0.2em;
+	font-family: gill_header;
 }
 h4{
 	color: #4a4a4a;
 margin-bottom: 2%;
 margin-top: 1%;
+font-family: gill_header;
 }
 
 /* FAQ */
 div#explain_content {
-    overflow: auto;
-    position: absolute;
-    top: 40px;
-    width: 100%;
     padding: 10px;
 }
 div#explain_panel div.faq_wrapper{
@@ -723,6 +734,8 @@ div#explain_panel div.faq_wrapper div.faq_header{
 	font-weight: bold;
 	padding-top: 5px;
 	padding-bottom: 1px;
+	font-size: 18px;
+	font-family: gill_header;
 }
 div#explain_panel div.faq_wrapper div.faq_content p{
 	margin-top: 3px;
