--- a/html/css/style.css
+++ b/html/css/style.css
@@ -744,7 +744,7 @@ div#explain_panel div.faq_wrapper div.faq_content p{
 
 /* attempt to hardware accelarate the worldmap */
 div#holder_1000 svg{
-	-webkit-transform: translateZ(0);
+	/*-webkit-transform: translateZ(0);*/
 }
 
 
