--- a/li/css/style.css
+++ b/li/css/style.css
@@ -27,12 +27,12 @@ body{
 	bottom: 0px;
 	left: 0px;
 	right: 0px;
-	height: auto;
+	height: 0px;
 	background: #999;
 	color: #FF0000;
 	opacity: 0;
 	z-index: 10;
-	padding: 10px 20px;
+	margin: 10px 20px;
 	text-align: center;
 }
 #loading{
