--- a/html/css/style.css
+++ b/html/css/style.css
@@ -27,12 +27,12 @@ body{
 	bottom: 0px;
 	left: 0px;
 	right: 0px;
-	height: auto;
+	height: 0px;
 	background: #999;
 	color: #FF0000;
 	opacity: 0;
 	z-index: 10;
-	padding: 10px 20px;
+	margin: 10px 20px;
 	text-align: center;
 }
 #loading{
@@ -62,6 +62,7 @@ body{
 	left: 10px;
 	right: 10px;	
 	z-index: 4;
+	max-width: 400px;
 	opacity: 0;
 	display: none;
 	/*transition: all 0.4s ease-out, height 0.4s ease-out 0.4s;
@@ -122,6 +123,7 @@ body{
 	left: 0px;
 	background:url('../img/back_btn.png') no-repeat 20px 12px;
 	background-size: auto 55%;
+	display: none;
 }
 
 .hide{
@@ -135,6 +137,7 @@ body{
 	right: 0px;	
 	background:url('../img/topfavorite.svg') no-repeat 5px 15px;	
 	background-size: auto 45%;
+	display: none;
 }
 #toggle_favourite.selected{
 	background-image:url('../img/favorite.svg');	
@@ -185,6 +188,7 @@ body{
 	width: 100%;
 	text-align: center;
 	z-index: 10000;
+	background: #272c2d;
 }
 #menu_bar .btn{
 	background-size: auto 80%;
@@ -437,10 +441,10 @@ span{
 
 #login_panel{
 	background-color: #f4f4f4;
-	background-image:url('../img/login_bg.png');
+	background-image:url('../img/worldmap.svg');
 	background-repeat: no-repeat;
-	background-position: fixed;
-	background-size: auto 100% ;
+	background-position: top;
+	background-size: 100% auto;
 	z-index: 2;
 }
 #login_panel span{
@@ -449,10 +453,17 @@ span{
 }
 #login{
 	position: absolute;
-	bottom: 100px;
 	left: 50px;
 	right: 50px;
-	bottom: 150px;
+	bottom: 0px;
+	height: 300px;
+	background-image:url('../img/philips_wordmark.svg');
+	background-repeat: no-repeat;
+	background-position: bottom;
+	background-size: auto 10%;	
+}
+#form_wrapper{
+	
 }
 #login input{
 	width: 100%;
@@ -474,6 +485,7 @@ span{
 }
 #overlay{
 	position: absolute;
+	top: 0px;
 	z-index: 3;
 	background: #000;
 	display: none;
@@ -625,7 +637,7 @@ li#philips.selected{
 	height: 50px;
 	position: absolute;
 	right: 0px;
-	background: url('../img/trash.svg') no-repeat 16px 8px;
+	background: url('../img/close_icon_black.svg') no-repeat 16px 8px;
 	opacity: 0.8;
 	background-size: 20px auto;
 }
@@ -851,6 +863,26 @@ and (min-width : 768px) {
 		height: 32%;
 		border-bottom: 1px solid #ececec;
 	}
+	.modal{
+		margin: auto auto;
+		height: 95%;
+		padding-bottom: 10px;
+		margin-top: 10px;
+		position: relative;
+		max-width: 400px;	
+	}
+	#btn_wrapper{
+		max-width: 400px;
+		margin: 0px auto;
+	}
+	#form_wrapper{
+		position: relative;
+		max-width: 400px;
+		margin: 0px auto;
+	}
+	#login_panel{
+		background-position: bottom;
+	}	
 }
 
 /* Large screens ----------- */
