--- a/li/css/style.css
+++ b/li/css/style.css
@@ -161,7 +161,7 @@ body{
 	color: #fff;
 	font-size: 22px;
 	height: 22px;
-	font-family: gill_header;
+	font-family: gill;
 }
 #filter_breadcrumb_wrapper{
 	display: block;
@@ -308,8 +308,8 @@ span{
 #region_lives_improved{
 	position: absolute;
 	display: block;
-	bottom: 40%;
-	height: 60%;
+	bottom: 50%;
+	height: 50%;
 	left: 0px;
 	right: 0px;
 }
@@ -317,7 +317,7 @@ span{
 	position: absolute;
 	display: block;
 	height: 20%;
-	bottom: 20%;
+	bottom: 30%;
 	left: 0px;
 	right: 0px;
 		
@@ -326,7 +326,7 @@ span{
 	position: absolute;
 	display: block;
 	height: 20%;
-	bottom: 0px;
+	bottom: 10%;
 	left: 0px;
 	right: 0px;		
 }
@@ -367,28 +367,31 @@ span{
 .lives_improved_sub{
 	clear: both;
 	display: block!important;
+	font-family: Verdana, arial;
 	font-size: 10px;
-	width: 100%;
 	color: #000000;
 	opacity: .4;
-	font-weight: bold;
-	padding-right: 5px!important;
+	padding-right: 0px!important;
 	padding-left: 5px!important;
 	
 }
 #nr_gdp{
 	color: #fff;
 	padding-top: 2px;
-	background: url('../img/gdp.svg') no-repeat 0px 0px;	
 	height: 25px;
 	background-size: 25px auto;
 	padding-right: 5px!important;
+}
+#nr_gdp span, #nr_population span{
+	font-family:Verdana,arial;
+	font-size: 14px;
+	color: #000000;
+	opacity: 0.4;
 }
 #nr_population{
 	color: #fff;
 	padding-top: 5px;
 	padding-right: 5px!important;
-	background: url('../img/population.svg') no-repeat 0px 0px;	
 	height: 25px;
 	background-size: 25px auto;
 }
@@ -399,10 +402,10 @@ span{
 	fill: #fff;
 }
 #lives_improved_percentage_sub{
-	font-size: 1.2em;
+	font-family: Verdana, arial;
+	font-size: 1.4em;
 	color: #000000;
 	opacity: .4;
-	font-weight: bold;
 }
 
 #simulation{
@@ -639,7 +642,7 @@ li#philips.selected{
 	right: 0px;
 	background: url('../img/close_icon_black.svg') no-repeat 16px 8px;
 	opacity: 0.8;
-	background-size: 20px auto;
+	background-size: 15px auto;
 }
 
 #explain_panel{
@@ -758,7 +761,7 @@ input[type='range']::-webkit-slider-thumb {
 h2{
 	font-size: 17px;
 	margin: 10px 10px;
-	font-family: gill_header;
+	font-family: gill;
 }
 h3{
 	color: #4a4a4a;
@@ -766,13 +769,14 @@ h3{
 	font-weight: normal;
 	margin-top: 0.5em;
 	margin-bottom: 0.2em;
-	font-family: gill_header;
+	font-family: Verdana, arial;
 }
 h4{
 	color: #4a4a4a;
-margin-bottom: 2%;
-margin-top: 1%;
-font-family: gill_header;
+	font-size: 12px;
+	margin-bottom: 2%;
+	margin-top: 2%;
+	font-family: Verdana, arial;
 }
 
 /* FAQ */
@@ -788,11 +792,12 @@ div#explain_panel div.faq_wrapper div.faq_header{
 	padding-top: 5px;
 	padding-bottom: 1px;
 	font-size: 18px;
-	font-family: gill_header;
+	font-family: gill;
 }
 div#explain_panel div.faq_wrapper div.faq_content p{
 	margin-top: 3px;
 	margin-bottom: 7px;
+	font-family: Verdana, arial;
 }
 
 /* attempt to hardware accelarate the worldmap */
