--- a/html/css/style.css
+++ b/html/css/style.css
@@ -97,10 +97,29 @@ body{
 	position: absolute;
 	top: 0px;
 	left: 0px;
+	
 	width: 100%;
 	height: 40px;
 	background: #1f1f1f;
 	color: #fff;
+}
+.panel_header h2{
+	padding-left: 30px;
+}
+.panel_header .btn{
+	border: none;
+}
+#filter_panel .panel_header{
+	background: #272c2d url('../img/filter.svg') no-repeat 5px 6px;	
+	background-size: auto 70%!important;
+}
+#explain_panel .panel_header{
+	background: #272c2d url('../img/faq.svg') no-repeat 5px 6px;	
+	background-size: auto 70%!important;
+}
+#bookmarks_panel .panel_header{
+	background: #272c2d url('../img/favorite.svg') no-repeat 5px 6px;	
+	background-size: auto 70%!important;	
 }
 .modal_content{
 	position: absolute;
