css to prevent text from being selected - @Rutger - can you poly this to specific headers and texts in the app? That way they cannot be selected anymore - just like in a "native" app

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -11,6 +11,13 @@
 *{
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);	
 }
+
+/* prevent selection of elements in web view 
+*:not(input):not(textarea) {
+	-webkit-user-select: none; 
+	-webkit-touch-callout: none; 
+}
+*/
 body{
 	position: absolute;
 	top: 0px;
