--- a/html/css/style.css
+++ b/html/css/style.css
@@ -787,6 +787,9 @@ input[type='range']::-webkit-slider-thumb {
   	box-shadow: 0px 0px 1px 1px #ccc;
   	z-index: 10000;
 }
+input#slidersales, input#slidergreensales{
+	margin-left: 0px!important;
+}
 
 .slider_value{
 	width: 12%;
