--- a/html/css/graph.css
+++ b/html/css/graph.css
@@ -3,7 +3,7 @@ svg.graph {
 	border: 1px solid red;
 	font-family: Arial;
 	font-size: 14px;
-	padding: 10px;
+	/*padding: 10px;*/
 }
 
 svg.graph g#wrapper{
