all errors passed in callbacks and can now be handled in error.js

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -36,7 +36,7 @@ body{
 	height: 0px;
 	background: #999;
 	color: #FF0000;
-	opacity: 0;
+	opacity: 1;
 	z-index: 10;
 	margin: 10px 20px;
 	text-align: center;
@@ -265,10 +265,10 @@ body{
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	right: 0px;http://95.97.163.236/sandbox/html/index.html
+	right: 0px;
 	bottom: 0px;
 	background-size: auto 100%;
-	background-position: fixed;
+	background-attachment: fixed;
 	z-index: 10;
 }
 #region_info_wrapper{
@@ -553,6 +553,25 @@ span{
 	/*transition: opacity 0.4s ease-out, height 0.4s ease-out 0.4s;
 	-webkit-transition: opacity 0.4s ease-out, height 0.4s ease-out 0.4s;		*/
 }
+#filter_loader{
+	width: 32px;
+	height: 32px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 10000000;
+	background: url('../img/ajax-loader_white.gif') no-repeat;
+	display: none;
+}
+#loader{
+	width: 32px;
+	height: 32px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 10000000;
+	background: url('../img/ajax-loader.gif') no-repeat;
+}
 #filter_panel{
 	background: #fff;
 }
@@ -647,7 +666,7 @@ li#philips.selected{
 	text-align: center;
 	padding-top: 10px;
 }
-#oru_filter_container div:last-child. #activity_filter_container div:last-child{
+#oru_filter_container div:last-child, #activity_filter_container div:last-child{
 	border-right: none;
 }
 #oru_filter_container div.selected, #activity_filter_container div.selected{
@@ -988,8 +1007,6 @@ and (min-width : 1824px) {
 }
 
 /* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
+@media only screen and (-webkit-min-device-pixel-ratio : 1.5)or (min-device-pixel-ratio : 1.5) {
 /* Styles */
 }
