--- a/html/css/graph.css
+++ b/html/css/graph.css
@@ -1,7 +1,7 @@
 
 svg.graph {
 	font-family: gill;
-	font-size: 14px;
+	font-size: 1em;
 }
 
 svg.graph g#wrapper{
@@ -10,7 +10,7 @@ svg.graph g#wrapper{
 
 /* graph title */
 svg.graph #graph_title{
-	font-size: 20px;
+	font-size: 2em;
 	fill: #ffffff;
 		fill-opacity: 1;
 		stroke: none;
@@ -89,24 +89,28 @@ svg.graph path#popup_trend_base{
 	stroke-opacity:1;
 }
 
-	svg.graph text#popup_trend_number,
-	svg.graph text#popup_trend_text{
-		font-size: 15px;
-		font-style: normal;
-		font-weight: normal;
-		line-height: 125%;
-		letter-spacing: 0px;
-		word-spacing: 0px;
-		fill: #ffffff;
-		fill-opacity: 1;
-		stroke: none;
-		text-anchor: end;
-	}
+svg.graph text#popup_trend_number,
+svg.graph text#popup_trend_text{
+	font-size: .6em;
+	font-style: normal;
+	font-weight: normal;
+	line-height: 125%;
+	letter-spacing: 0px;
+	word-spacing: 0px;
+	fill: #ffffff;
+	fill-opacity: 1;
+	stroke: none;
+	text-anchor: end;
+}
+svg.graph text#popup_trend_number{
+	text-anchor: middle;
+	font-size: 1em;
+}
+/* value popup */
+svg.graph g#popup_value{
+	/*visibility: hidden;*/
+}
 
-	/* value popup */
-	svg.graph g#popup_value{
-		/*visibility: hidden;*/
-	}
 svg.graph #popup_value_base{
 	fill: #ffffff;
 	stroke: #000000;
@@ -117,7 +121,7 @@ svg.graph #popup_value_base{
 }
 svg.graph text#popup_value_number,
 svg.graph text#popup_value_text{
-	font-size: 15px;
+	font-size: .6em;
 	font-style: normal;
 	font-weight: normal;
 	line-height: 125%;
@@ -127,6 +131,9 @@ svg.graph text#popup_value_text{
 	fill-opacity: 1;
 	stroke: none;
 	text-anchor: middle;
+}
+svg.graph text#popup_value_number{
+	font-size: 1em;
 }
 svg.graph text#popup_value_number{
 	font-size: 18px;
